# ai-rss-line-bot

./: .env.example  .gitignore  README.md
backend/: Dockerfile  Makefile  pyproject.toml
backend/my_journalist/: __main__.py  alembic.ini  app.py
backend/my_journalist/alembic/: __main__.py  env.py
backend/my_journalist/alembic/versions/: 032b99326bf8_revise_user_table.py  12008aeb9cb6_update_repr.py  1a8e8906fa43_add_collections_table.py  333e9d968469_add_fetched_at_in_rss.py  34a054293511_first_revision.py  36716e4edd9f_collcecion_user_id_and_article_id_to_be_.py  39f11eb5ecd2_revise_text_as_default_none.py  4b9563c7ff13_remove_user_and_rss_relationship.py  4e5868d06707_update_timezone_of_publish_date.py  4ed062d52ee8_update_default_value_of_category_to.py  50a540d97a1e_add_link_and_filter_link_tables.py  6db567f48d36_revise_article_table_create_at.py  7790d78d3577_revise_article_table.py  a190628c23d7_revise_user_table.py  bf3109a4c9eb_remove_salt_from_user.py  e8169c977231_delte_rss_user_tbale_and_revise_.py  f816ef67fc27_add_salt_to_user.py  f8549126643f_revise_user_id.py
backend/my_journalist/data/: init_rss_data.json
backend/my_journalist/database/: config.py  crud.py  db.py  models.py  schemas.py
backend/my_journalist/routers/: collcections.py  linebot.py  signin.py  signup.py  web_posts.py
backend/my_journalist/utils/: filter.py  jwt_generation.py  logger.py  parser.py  summarizer.py  token_handler.py
backend/script/: docker-entrypoint.sh  init_db_script.py  parse_rss_script.py  trigger_broadcast_script.py
backend/test/: test.py
redis/: Makefile  (+1 more)
(+39 files in other folders)
